@@ -999,7 +999,7 @@ image create photo ::browser::pseudoicon   -format gif \
             set id [$win.tree nearest $x $y]
             if {$id != ""} {
                 set path [$win.tree get -full $id]
-                eval $script $path $X $Y
+                eval $script [list $path] $X $Y
             }
         }
     }
